--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!--NAVBAR-->
       <div class="cointainer-fluid">
       <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-        <a class="navbar-brand" href="#">Kawasaki</a>
+        <a class="navbar-brand" href="index.html">Kawasaki</a>
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a class="nav-link" href="dovesiamo.html">Dove trovarci</a>
